<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".BmiCalculator"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bmi_calculator"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/bmi_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:text="@string/bmi_app_suggestion"
        android:layout_marginTop="100dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="150dp">

        <EditText
            android:id="@+id/weight_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:hint="@string/weight_in_kg"
            android:inputType="numberDecimal"
            android:autofillHints="@string/weight_in_kg" />

        <EditText
            android:id="@+id/height_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:inputType="numberDecimal"
            android:hint="@string/height_in_meter"
            android:autofillHints="@string/height_in_meter" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/kg"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/m"/>

    </LinearLayout>

    <Button
        android:id="@+id/calculate_bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_gravity="center_horizontal"
        android:paddingRight="64dp"
        android:paddingLeft="64dp"
        android:layout_marginTop="100dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>